fix: replace Stream.collect(Collectors.toList()) by Stream.toList()